test/asm/section-in-load.err
warning: `LOAD` block without `ENDL` terminated by `SECTION` [-Wunterminated-load]
    at section-in-load.asm(3)
error: Found `ENDL` outside of a `LOAD` block
    at section-in-load.asm(4)
Assembly aborted with 1 error!
