test/asm/section-in-load.asm
SECTION "outer1", ROM0
LOAD "ram", WRAM0
SECTION "outer2", ROM0
ENDL
